Completed adding route for mailInfo

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
             <div class="text-sm lg:flex-grow">
                 <a href="/" class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-4">Home</a>
                 <% if (locals.user) { %>
-                    <a  href="/profile" 
+                    <a  href="/mailInfo" 
                         class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-4">Profile</a>
                     <a  href="/logout" 
                         class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-4">Logout</a>
